# jQueReact

./: .gitignore  LICENSE  README.md  index.html  index.js  package-lock.json  package.json  server.js  tsconfig.json  vite.config.ts
core/: Cargo.toml
core/src/: dom_node.rs  generator.rs  lib.rs  parser.rs  transform.rs
pkg/: index.ts
plugins/: vite-plugin.ts
public/: .htaccess  index.html  style.css
rust/: Cargo.toml
rust/src/: dom_node.rs  generator.rs  lib.rs  parser.rs  transform.rs
scripts/: build_wasm.sh  watch_wasm.sh
src/: App.tsx  config.ts  index.ts  transformer.ts  transformer.tsx  wasm-interface.ts
src/legacy/: example.jquery.js
src/patterns/: index.ts
