[package]
name = "jquereact"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.83"
anyhow = "1.0"
cargo-watch = "8.5.3"
js-sys = "0.3.60"
web-sys = { version = "0.3.60", features = ["console"] }
console_error_panic_hook = "0.1.7"

swc_core = { version = "22.2.1", features = [
  "ecma_parser",
  "ecma_ast",
  "ecma_codegen",
  "ecma_visit",
  "common",
]}

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
lto = true
opt-level = 'z'